pulling functions out of nested function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 	</head>
 
 	<body>
+	<ul class="box">
+		<div class="triangle"></div>
+		<li> </li>
+		<li>/</li>
+		<li>|</li>
+		<li>=</li>
+		<li>\\</li>	
+		<div class="clear"></div>
+	</ul>
 	<h1>Tower</h1>
 	<div id="inputWrapper">
 		<h2>You can pick the size of the grid</h2>
@@ -21,6 +30,7 @@
 	</div>
 	<div id="gridWrapper">
 		<ul class="towerGrid"></ul>
+		<div class="clear"></div>
 	</div>
 	</body>
 </html>
